downgraded to java 8 to allow for compatibility with legacy platforms, as the project doesn't require new features